try to solve img not showing on heroku (project pics 4, 5 and 6)

--- a/css/style.css
+++ b/css/style.css
@@ -350,7 +350,7 @@ footer a {
     }
 
     .project .project-pic {
-        width: 28vw;
+        width: 29vw;
         max-height: 600px;
     }
 
@@ -367,7 +367,7 @@ footer a {
     }
 
     .pic4 {
-        background-image: url('../img/calculatormobile.jpeg');
+        background-image: url('../img/calculator.jpeg');
     }
     
     .pic5 {
